@@ -1,1 +1,1 @@
-md5deep was written by Jesse Kornblum, md5deep@jessekornblum.com
+md5deep was written by Jesse Kornblum, research@jessekornblum.com
